--- a/src/Header.css
+++ b/src/Header.css
@@ -1,8 +1,10 @@
 .header {
 
-  background-color: rgb(212, 134, 150);
+  background-color: rgb(217, 158, 170);
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
 }
