--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,11 @@
 .header {
 
   background-color: rgb(217, 158, 170);
-  height: 80px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2em;
+  color: beige;
 }
