--- a/src/MainContent.css
+++ b/src/MainContent.css
@@ -1,18 +1,41 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .main-content {
-
+  background-color: antiquewhite;
   width: 80%;
   margin: 100px auto;
-  border: 3px solid teal;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
   gap: 30px;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+ 
+
 }
 
 .item {
 
   width: 80%;
-  border: 2px solid yellowgreen
+  padding: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  box-shadow: 10px 10px 10px 20px rgb(240, 224, 228);
+  
+
+  
+}
+
+h4 {
+  font-size: 2em;
+}
+
+p {
+  font-size: 1.3em;
+  line-height: 1.5;
+  margin-top: 10px;
 }
