--- a/src/Header.css
+++ b/src/Header.css
@@ -7,5 +7,7 @@
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2em;
+  font-weight: normal;
   color: beige;
+
 }
