--- a/src/MainContent.css
+++ b/src/MainContent.css
@@ -4,14 +4,13 @@
   padding: 0;
 }
 .main-content {
-  background-color: antiquewhite;
+
   width: 80%;
   margin: 100px auto;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
-  gap: 30px;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
  
@@ -21,19 +20,19 @@
 .item {
 
   width: 80%;
-  padding: 20px;
+  padding: 30px;
   margin-top: 50px;
   margin-bottom: 50px;
+  background-color: rgb(97, 98, 111);
+  color: beige;
   box-shadow: 10px 10px 10px 20px rgb(240, 224, 228);
-  
 
-  
 }
 
-h4 {
+h3 {
+
   font-size: 2em;
 }
-
 p {
   font-size: 1.3em;
   line-height: 1.5;
